--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-app-password
 
-# XLSX file passwords
+# XLSX file passwords (optional - remove passwords from Excel file for simplicity)
 XLSX_OPEN_PASSWORD=your-open-password
 XLSX_EDIT_PASSWORD=your-edit-password
