workflow : fix syntax err + only 30 mails per day to test rate limiting and spam checks

--- a/.github/workflows/daily-email.yml
+++ b/.github/workflows/daily-email.yml
@@ -4,11 +4,11 @@ on:
   schedule:
     # Run at 8:00 AM and 8:00 PM UTC daily (adjust timezone as needed)
     - cron: "0 8 * * *" # 8:00 AM UTC only 30 per each time
-    - cron: "0 20 * * *" # 8:00 PM UTC only 30 per each time
+    # - cron: "0 20 * * *" # 8:00 PM UTC only 30 per each time
     # to avoid spam filters and limits
     # - cron: "0 22 * * *" # 11 PM UTC setting for may be hopping for 50 more emails - making total of 150
     # - cron: "0 23 * * *" # setting for 200 mails target slipt into 4 x 50, success rate is 3/4
-  workflow_dispatch: # Allow manual triggering
+  workflow_dispatch:
 
 jobs:
   send-emails:
