--- a/.github/workflows/daily-email.yml
+++ b/.github/workflows/daily-email.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     # Run at 8:00 AM and 8:00 PM UTC daily (adjust timezone as needed)
     - cron: "0 8 * * *" # 8:00 AM UTC
-   
+
   workflow_dispatch: # Allow manual triggering
 
 jobs:
@@ -36,6 +36,13 @@ jobs:
           echo "EMAIL_PASS=${{ secrets.EMAIL_PASS }}" >> .env
           echo "XLSX_OPEN_PASSWORD=${{ secrets.XLSX_OPEN_PASSWORD }}" >> .env
           echo "XLSX_EDIT_PASSWORD=${{ secrets.XLSX_EDIT_PASSWORD }}" >> .env
+          echo "GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}" >> .env
+
+      - name: Print GROQ_API_KEY (redacted)
+        run: |
+          if [ -z "$GROQ_API_KEY" ]; then echo "GROQ_API_KEY is NOT set"; else echo "GROQ_API_KEY is set: [REDACTED]"; fi
+        env:
+          GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
 
       - name: Run email campaign
         run: node src/index.js
